<resources>
    <string name="app_name">CV Android</string>
    <string name="about">About Me</string>
    <string name="skill">Skills</string>
    <string name="exp">Experience</string>
    <string name="portfolio">Portfolio</string>
    <string name="nama">Asmaul Sufarhansyah</string>
    <string name="spesialis">Web Developer</string>
    <string name="spesialis1">UI/UX Designer</string>
    <string name="konjungsi">and</string>
    <string name="deskripsi">"Hi, my name is Asmaul Sufarhansyah I was born on 16th July  2002. I have an interest in the world of web programming. I have a high curiosity and desire to keep learning."</string>
    <string name="kontak">Contact</string>
    <string name="edukasi">Education Formal</string>
    <string name="tahun1">2008 - 2014</string>
    <string name="sekolah1">SDN Mekarjaya 28</string>
    <string name="kota">Depok</string>
    <string name="tahun2">2014 - 2017</string>
    <string name="sekolah2">SMPN 4 Depok</string>
    <string name="tahun3">2017 - 2020</string>
    <string name="sekolah3">SMK Taruna Bhakti</string>
    <string name="alamat">Jl. Proklamasi Gg. Mushola 3 No 87D Abadijaya Sukmajaya Depok</string>
    <string name="no">0813-8364-7180</string>
    <string name="email">so.farhansyah@gmail.com</string>
    <string name="instagram">aan.syah_</string>
    <string name="coding">Programming</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="javas">JS</string>
    <string name="php">PHP</string>
    <string name="python">PYTHON</string>
    <string name="framework">Framework</string>
    <string name="bootstrap">Bootstrap</string>
    <string name="laravel">Laravel</string>
    <string name="codeigniter">Codeigniter</string>
    <string name="design">Design</string>
    <string name="figma">Figma</string>
    <string name="adobeai">Illustrator</string>
    <string name="adobeps">Photoshop</string>
    <string name="twitter">han_syah_</string>
    <string name="linkedin">Asmaul Sufarhansyah</string>
    <string name="github">sofarhan16</string>
    <string name="sertifikat">Certificate</string>
    <string name="htmlsert">HTML Fundamental</string>
    <string name="sololearn">Sololearn Certificate</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="show">Show</string>
    <string name="csssert">CSS Fundamental</string>
    <string name="phpsert">PHP Tutorial</string>
    <string name="award">Award</string>
    <string name="place3rd">3rd Place</string>
    <string name="kompetisi">Elementary School Choir Competition</string>
    <string name="tahunaw1">2010</string>
    <string name="place1st">1st Place</string>
    <string name="kompetisi1">Elementary School Choir Competition</string>
    <string name="tahunaw2">2011</string>
    <string name="organization">Organization</string>
    <string name="jabatan">Chair of the MPK</string>
    <string name="tahunjabatan">2018 - 2019</string>
    <string name="info">Apps Info</string>
    <string name="cardview">CardView</string>
    <string name="button">Button</string>
    <string name="imageview">ImageView</string>
    <string name="linearlayout">LinearLayout</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="scrollview">ScrollView</string>
    <string name="textview">TextView</string>
    <string name="circleimage">CircleImageView</string>
    <string name="view">View</string>
    <string name="progressbar">ProgressBar</string>
    <string name="feature">Feature</string>
    <string name="deskcardview">CardView is a FrameLayout with a rounded corner background and shadow.</string>
    <string name="contoh">Example</string>
    <string name="deskbutton">A button consists of text or an icon (or both text and an icon) that communicates what action occurs when the user touches it.</string>
    <string name="deskimageview">ImageView is for displaying image resources.</string>
    <string name="desklinearlayout">LinearLayout is a layout that arranges other views either horizontally in a single column or vertically in a single row.</string>
    <string name="deskrelativelayout">RelativeLayout is a Layout where the positions of the children can be described in relation to each other or to the parent.</string>
    <string name="deskscrollview">ScrollView is a view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it.</string>
    <string name="desktextview">TextView is a user interface element that displays text to the user.</string>
    <string name="example">This is an example of TextView</string>
    <string name="deskcircleimage">CircleImage is a fast circular ImageView perfect for profile images.</string>
    <string name="deskview">View is class represents the basic building block for user interface components. A View occupies a rectangular area on the screen and is responsible for drawing and event handling.</string>
    <string name="deskprogressbar">ProgressBar is a user interface element that indicates the progress of an operation.</string>
    <string name="gallery">Gallery</string>
    <string name="university">School</string>
    <string name="desksekolah">SMK Taruna Bhakti is an industry-based school that focuses on Information Technology in Depok.</string>
    <string name="paketkejuruan">Vocational Package</string>
    <string name="tkj">Computer and Network Engineering</string>
    <string name="rpl">Software Engineering</string>
    <string name="tei">Industrial Electronic Engineering</string>
    <string name="mm">Multimedia</string>
    <string name="bc">Broadcasting</string>
    <string name="alamatsekolah">Jln. Pekapuran Kel. Curug . Kec. Cimanggis Depok</string>
    <string name="kodepos">Postal Code : 16953</string>
    <string name="telp">Telp. (021) 8744810</string>
    <string name="kelas">My Class</string>
    <string name="rpl2">XII RPL 2</string>
    <string name="designdoc">Design Documentation</string>
    <string name="designsc">Screenshoot Documentation</string>
    <string name="jssert">JavaScript Tutorial</string>
</resources>
