<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".School">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="@drawable/ic_up_waves_school"
            android:id="@+id/wavesschool"/>
        <View
            android:layout_width="40dp"
            android:layout_height="59.53dp"
            android:background="@drawable/ic_noun_back"
            android:layout_marginTop="14dp"
            android:id="@+id/btnbackschool"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:textSize="32dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_item_card"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/wavesschool"
            android:id="@+id/logotb"
            android:src="@drawable/logo_tb"
            android:layout_marginTop="@dimen/activity_vertical_item_card"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sekolah3"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:textSize="24dp"
            android:textColor="#FFF2527D"
            android:id="@+id/school"
            android:layout_below="@id/logotb"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/school"
            android:text="@string/desksekolah"
            android:id="@+id/desksekolah"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paketkejuruan"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:textSize="24dp"
            android:textColor="#FFF2527D"
            android:id="@+id/kejuruan"
            android:layout_below="@id/desksekolah"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tkj"
            android:layout_below="@id/kejuruan"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/tkj"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpl"
            android:layout_below="@id/tkj"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/rpl"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tei"
            android:layout_below="@id/rpl"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/tei"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mm"
            android:layout_below="@id/tei"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/mm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bc"
            android:textColor="#FFFFFF"
            android:layout_below="@id/mm"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/bc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kontak"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:textSize="24dp"
            android:textColor="#FFF2527D"
            android:id="@+id/contact"
            android:layout_below="@id/bc"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamatsekolah"
            android:layout_below="@id/contact"
            android:textColor="#FFFFFF"
            android:id="@+id/alamatsekolah"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kodepos"
            android:layout_below="@id/alamatsekolah"
            android:id="@+id/kodepos"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telp"
            android:layout_below="@id/kodepos"
            android:id="@+id/telp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:textSize="24dp"
            android:textColor="#FFF2527D"
            android:id="@+id/kelas"
            android:layout_below="@id/telp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpl2"
            android:layout_below="@id/kelas"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:layout_marginBottom="@dimen/activity_vertical_item_card"/>
    </RelativeLayout>
</ScrollView>