<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#282020"
    tools:context=".About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/wavesabout"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="@drawable/ic_up_waves_about"/>
        <View
            android:layout_width="40dp"
            android:layout_height="59.53dp"
            android:background="@drawable/ic_noun_back"
            android:layout_marginTop="14dp"
            android:id="@+id/btnbackabout"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="32dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_item_card"/>
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_below="@id/wavesabout"
            android:src="@drawable/profile_image"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wavesabout"
            android:text="@string/nama"
            android:id="@+id/nama"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#FFF2527D"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/profile_image"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_image"
            android:layout_below="@id/nama"
            android:id="@+id/spesialis"
            android:text="@string/spesialis"
            android:textColor="#FFF2527D"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="18dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nama"
            android:layout_toRightOf="@id/spesialis"
            android:id="@+id/konjungsi"
            android:text="@string/konjungsi"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/konjungsi"
            android:layout_below="@id/nama"
            android:text="@string/spesialis1"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="#FFF2527D"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deskripsi"
            android:text="@string/deskripsi"
            android:layout_below="@id/profile_image"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edukasi"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:textSize="24dp"
            android:textColor="#FFF2527D"
            android:id="@+id/edukasi"
            android:layout_below="@id/deskripsi"
            android:textStyle="bold"/>
        <View
            android:layout_width="12dp"
            android:layout_height="191dp"
            android:background="@drawable/ic_union_edukasi"
            android:layout_below="@id/edukasi"
            android:id="@+id/garisedukasi"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/edukasi"
            android:id="@+id/tahun1"
            android:text="@string/tahun1"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="12dp"
            android:textSize="14dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/tahun1"
            android:text="@string/sekolah1"
            android:id="@+id/sekolah1"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:textSize="16dp"
            android:textColor="#FFF2527D"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/sekolah1"
            android:id="@+id/kota1"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:text="@string/kota"
            android:textSize="12dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/kota1"
            android:id="@+id/tahun2"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:text="@string/tahun2"
            android:textSize="14dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/tahun2"
            android:id="@+id/sekolah2"
            android:text="@string/sekolah2"
            android:textColor="#FFF2527D"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/sekolah2"
            android:id="@+id/kota2"
            android:text="@string/kota"
            android:textSize="12dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/kota2"
            android:id="@+id/tahun3"
            android:text="@string/tahun3"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:textColor="#FFFFFF"
            android:textSize="14dp"
            android:layout_marginTop="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:id="@+id/sekolah3"
            android:layout_below="@id/tahun3"
            android:text="@string/sekolah3"
            android:textSize="16dp"
            android:textColor="#FFF2527D"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/garisedukasi"
            android:layout_below="@id/sekolah3"
            android:textSize="12dp"
            android:id="@+id/kota3"
            android:text="@string/kota"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kontak"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:textColor="#FFF2527D"
            android:layout_below="@id/kota3"
            android:textSize="24dp"
            android:id="@+id/kontak"
            android:textStyle="bold"/>
        <View
            android:layout_width="25dp"
            android:layout_height="41.66dp"
            android:background="@drawable/ic_lokasi_kustom"
            android:layout_below="@id/kontak"
            android:id="@+id/lokasi"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:id="@+id/alamat"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:layout_below="@id/kontak"
            android:layout_toRightOf="@id/lokasi"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_wa_kustom"
            android:layout_below="@id/lokasi"
            android:id="@+id/telepon"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/alamat"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@id/telepon"
            android:id="@+id/no"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_gmail_kustom"
            android:layout_below="@id/telepon"
            android:id="@+id/emailv"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no"
            android:autoLink="email"
            android:textStyle="normal"
            android:layout_toRightOf="@id/emailv"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/email"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="16dp"/>
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_ig_kustom"
            android:layout_below="@id/emailv"
            android:id="@+id/ig"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_toRightOf="@id/ig"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/instagram"
            android:text="@string/instagram"
            android:textColor="#FFFFFF"
            android:textSize="16dp"/>
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_twitter_kustom"
            android:layout_below="@id/ig"
            android:id="@+id/twt"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instagram"
            android:layout_toRightOf="@id/ig"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/twitter"
            android:text="@string/twitter"
            android:textColor="#FFFFFF"
            android:textSize="16dp"/>
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_linkedin_kustom"
            android:layout_below="@id/twt"
            android:id="@+id/in"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="32dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/twitter"
            android:layout_toRightOf="@id/in"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/linkedin"
            android:text="@string/linkedin"
            android:textColor="#FFFFFF"
            android:textSize="16dp"/>
        <View
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_github_kustom"
            android:layout_below="@id/in"
            android:id="@+id/git"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/activity_vertical_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linkedin"
            android:layout_toRightOf="@id/in"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:id="@+id/github"
            android:text="@string/github"
            android:textColor="#FFFFFF"
            android:textSize="16dp"/>
    </RelativeLayout>
</ScrollView>