<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextViewActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="@drawable/ic_up_waves_item_feature"
            android:id="@+id/wavestextview"/>
        <View
            android:layout_width="40dp"
            android:layout_height="59.53dp"
            android:background="@drawable/ic_noun_back"
            android:layout_marginTop="14dp"
            android:id="@+id/btnbacktextview"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="32dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_item_card"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wavestextview"
            android:id="@+id/txttextview"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:text="@string/textview"
            android:textColor="#FFF2527D"
            android:textSize="24dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desktextview"
            android:text="@string/desktextview"
            android:layout_below="@id/txttextview"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desktextview"
            android:id="@+id/cthtextview"
            android:layout_marginTop="@dimen/activity_vertical_item_card"
            android:layout_marginLeft="@dimen/activity_horizontal_item_card"
            android:text="@string/contoh"
            android:textColor="#FFF2527D"
            android:textSize="24dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cthtextview"
            android:textColor="#FFF2CB05"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/example"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>